game/02-CSS/base.css
/* ... */
.bg-black {
	background-color: #000;
}

.bg-white,
.bg-pale-white {
	background-color: #EEE;
}

.bg-brown {
	background-color: #aa7243;
}

.bg-softbrown {
	background-color: #a45e16;
}

.bg-lightbrown {
	background-color: #C5793A;
}

.bg-burntorange {
	background-color: #d47730;
}

.bg-softblond {
	background-color: #e4cd87;
}

.bg-platinum {
	background-color: #FEF593;
}

.bg-ashy {
	background-color: #d3cfaa;
}

.bg-strawberry {
	background-color: #F08C51;
}

.bg-lewd {
	background-color: #E04880;
}

.bg-grey {
	background-color: #B7B7B7;
}

.bg-tan {
	background-color: #D2B48C;
}

.bg-sand {
	background-color: #FFDFA1;
}

.bg-olive {
	background-color: #8E8E38;
}

.bg-navy {
	background-color: #667DC1;
}

.bg-wine {
	background-color: #8B3626;
}

.bold {
	font-weight: bold;
}

.italic {
	font-style: italic;
}

.general {
	opacity: 0.99;
}

.wetstage2 {
	opacity: 0.90;
		filter: brightness(0.95);

}

.wetstage3 {
	opacity: 0.75;
		filter: brightness(0.90);

}

.grey-shadow {
	filter: drop-shadow(1px 1px 0px #666);
}

#stats {
	height: 20px;
	width: 256px;
	overflow: hidden;
	border-top: #fff 2px solid;
	border-bottom: #fff 2px solid;
	position: fixed;
	top: 232px;
	left: 0px;
	background-color: #222;
	z-index: 1000;
}

#stats > * {
	top: 232px;
	left: 0px;
}

.statsExtended {
	height: 45px !important;
}

.icon_ui {
	position: static !important;
	height: 14px;
	width: 14px;
}

#statbar {
	position: relative;
	left: 0px;
	top: 9px;
	z-index: 0;
}

#img {
	height: 256px;
	width: 256px;
	overflow: hidden;
	position: fixed;
	top: 0px;
	left: 0px;
	background-color: #222;
}

#img > * {
	position: absolute;
	top: 0px;
	left: 0px;
}

.noAnimations img {
	-webkit-animation-duration: unset !important;
	-webkit-animation-timing-function: unset !important;
	-webkit-animation-iteration-count: unset !important;
	-webkit-animation-name: unset !important;
	animation-duration: unset !important;
	animation-timing-function: unset !important;
	animation-iteration-count: unset !important;
	animation-name: unset !important;
}

.imgLighten {
	background-color: #777 !important;
}

.imgLighten2 {
	background-color: #999 !important;
}

#ui-bar-toggle {
	background-color: #222;
}

#versioninfo, #story-title {
	position:relative;
	z-index: 2;
}

#startingPlayerImage {
	margin-top:130px;
}

#startingPlayerImage #img{
	top: 100px;
	left: 20px;
}

.icon_ui {
	position: static !important;
	height: 14px;
	width: 14px;
}
.layer-bg {
	z-index: 0;
}

#relative {
	position: relative;
	width: 0px;
	height: 0px;
	z-index: 10;
}

#icon {
	position: static;
	vertical-align:middle;
}

#accIcon {
	position: absolute;
	right: 4px;
}

#spanIcon {
	position: absolute;
}

#daystate {
	position: fixed;
	left: 0px;
	top: 0px;
	z-index: 10;
}

#weather {
	position: fixed;
	left: 0px;
	top: 64px;
	z-index: 10;
}

#location {
	position: fixed;
	left: 0px;
	top: 128px;
	z-index: 10;
}

#spray1 {
	position: fixed;
	left: 0px;
	top: 192px;
	z-index: 10;
}

#spray2 {
	position: fixed;
	left: 13px;
	top: 192px;
	z-index: 10;
}

#spray3 {
	position: fixed;
	left: 27px;
	top: 192px;
	z-index: 10;
}

#spray4 {
	position: fixed;
	left: 42px;
	top: 192px;
	z-index: 10;
}

#spray5 {
	position: fixed;
	left: 56px;
	top: 192px;
	z-index: 10;
}

#spray6 {
	position: fixed;
	left: 68px;
	top: 192px;
	z-index: 10;
}

@media screen and (min-color-index:0) and(-webkit-min-device-pixel-ratio:0)
{ @media all{
	#ui-bar-body {
		overflow-x: hidden;
	}

	#stats, #img, #daystate, #weather, #location, #spray1, #spray2, #spray3, #spray4, #spray5
	{
		position: absolute;
	}
}}

@media not all and (min-resolution:.001dpcm) {
	@media all{
	#ui-bar-body {
		overflow-x: hidden;
	}

	#stats, #img, #daystate, #weather, #location, #spray1, #spray2, #spray3, #spray4, #spray5
	{
		position: absolute;
	}
}}

#divandroidxray {
	position: relative;
	display: inline-block;
	height: 256px;
	width: 256px;
}

#xrayvaginal, #divsex #xrayvaginal {
	position: absolute;
	left: 0px;
	top: 0px;
	z-index: 3;
}

#xrayvaginalcum, #divsex #xrayvaginalcum {
	position: absolute;
	left: 0px;
	top: 0px;
	z-index: 4;
	height: 128px;
}

#xraypenile, #divsex #xraypenile {
	position: absolute;
	left: 0px;
	top: 0px;
	z-index: 2;
}

#xrayanal, #divsex #xrayanal {
	position: absolute;
	left: 512px;
	top: 0px;
	z-index: 1;
}

#xrayandroidvaginal, #divsex #xrayandroidvaginal {
	position: relative;
	left: 0px;
	top: -8px;
	z-index: 3;
	height: 128px;
}

#xrayandroidpenile, #divsex #xrayandroidpenile {
	position: relative;
	left: 0px;
	top: -8px;
	z-index: 2;
	height: 128px;
}

#xrayandroidanal, #divsex #xrayandroidanal {
	position: relative;
	left: 0px;
	top: -8px;
	z-index: 1;
	height: 128px;
}

/*
Combat display styles
*/
#listContainer	{
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	margin-bottom: 40px;
}

.radioControl	{
	display: block;
	width: 100%;
}

.radioControl .extraMargin	{
	margin-bottom: 20px;
}

.listsControl, .limitedListsControl	{
	display: flex;
	flex-direction: column;
	padding: 2px;
	border: solid 1px #555;
	margin: 5px;
}

.limitedListsControl	{
	min-width: 46%;
}

@media only screen and (max-width: 500px) {
	.limitedListsControl, .listsControl {
		min-width: 99%;
	}
	.limitedListsControl .flavorText select, .listsControl .flavorText select {
		max-width: 500px;
	}
}

.whiteList select,.whiteList select:hover,.whiteList select:focus{
	border:#fff 2px solid;
	width: 99%;
	max-width: 300px;
}

.bratList select,.bratList select:hover,.bratList select:focus{
	border:#B75D41 2px solid;
	width: 99%;
	max-width: 300px;
}

.meekList select,.meekList select:hover,.meekList select:focus{
	border:#C44B8B 2px solid;
	width: 99%;
	max-width: 300px;
}

.defList select,.defList select:hover,.defList select:focus{
	border:#D20000 2px solid;
	width: 99%;
	max-width: 300px;
}

.subList select,.subList select:hover,.subList select:focus{
	border:#AA4BC8 2px solid;
	width: 99%;
	max-width: 300px;
}
/* ... */

